// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render title 1`] = `
<header
  className=""
>
  <h1
    className="a b c"
  >
    Title
  </h1>
</header>
`;

exports[`should render title 2`] = `
"
.a {
  font-size: 2rem
}

.b {
  line-height: 1.2
}

.c {
  font-weight: 400
}
"
`;

exports[`should render title/subtitle 1`] = `
<header
  className=""
>
  <h1
    className="a b c"
  >
    Title
  </h1>
  <h2
    className="d e"
  >
    Subtitle
  </h2>
</header>
`;

exports[`should render title/subtitle 2`] = `
"
.a {
  font-size: 2rem
}

.b {
  line-height: 1.2
}

.c {
  font-weight: 400
}

.d {
  color: #7c7c7c
}

.e {
  font-weight: 300
}
"
`;
